hard-gists/5998853/run.log
=== Docker Run Log for 5998853 ===
Started at: Mi 29. Okt 16:11:27 CET 2025

[2025-10-29 16:11:27] START: Running container for 5998853
[2025-10-29 16:11:27] SUCCESS: Container d75224eff5219423251fcd4b3c25de7d0821eeeb88e944725da33b8ca8b4c5d8 started for 5998853
=== Container logs for 5998853 ===
  File "/snippet.py", line 39
    print "*   ERROR: Could not convert image."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5998853 ===
[2025-10-29 16:11:29] INFO: Container d75224eff5219423251fcd4b3c25de7d0821eeeb88e944725da33b8ca8b4c5d8 has stopped
